kubernetes/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    service: app
spec:
  selector:
    app: app
  ports:
  - port: 5000
    targetPort: 5000
