kubernetes/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: mymachine.com
    http:
      paths:
      - path: /test
        backend:
          serviceName: app
          servicePort: 5000
